--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                   Seeds of Greatness
                 </h1>
                 <a
-                  href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl"
+                  href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-963828766787?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl"
                   class="me-2 text-white"
                 >
                   <button
@@ -287,7 +287,7 @@
                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">
                   Flourish and Inspire Others
                 </h1>
-                <a href="" class="me-2 text-white">
+                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-963828766787?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2 text-white">
                   <button
                     type="button"
                     style="background-color: #008000"
