--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 </div> -->
               </a>
             </div>
-            <div class="d-flex d-none pe-4 text-center">
+            <div class=" pt-2 pe-4 ppctext text-center">
               <h1 class="text-center h1" style="color: #922222">
                 Possibility Power Conference 2024
               </h1>
