--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <!-- Navbar Start   bg-primary-->
     <div class="container-fluid" style="background-color: #ffffff">
       <div class="contai">
-        <nav class="navbar d-flex align-items-center navbar-dark">
-          <a href="index.html" class="navbar-brand">
+        <nav class="navbar d-flex align-items-center navbar-dark" style="">
+          <a href="index.html" class="navbar-brand  align-items-center">
             <div>
               <img
-                src="images/rccg.png"
+                src="images/newfile-removebg-preview.png"
                 height="60px"
                 loading="lazy"
-                class="object-cover aspect-square rounded-full"
+                class="object-cover aspect-square rounded-full align-items-center"
                 alt=""
               />
             </div>
@@ -100,7 +100,7 @@
             class="collapse navbar-collapse bg-transparent"
             id="navbarCollapse"
           >
-            <div class="navbar-nav ms-auto mx-xl-auto p-0">
+            <!-- <div class="navbar-nav ms-auto mx-xl-auto p-0">
               <a
                 href="index.html"
                 class="nav-item nav-link active text-secondary"
@@ -126,7 +126,7 @@
                 </div>
               </div>
               <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
+            </div> -->
           </div>
           <div class="d-no d-xl-flex flex-shirink-0">
             <div
@@ -141,14 +141,14 @@
               </a>
             </div>
             <div class=" pt-2 pe-4 ppctext text-center">
-              <h1 class="text-center h1" style="color: #922222">
+              <!-- <h1 class="text-center h1" style="color: #922222">
                 Possibility Power Conference 2024
-              </h1>
+              </h1> -->
             </div>
-            <div class="d-flex flex-column pe-4 border-end">
+            <!-- <div class="d-flex flex-column pe-4 border-end">
               <span class="text-white-50">Have any questions?</span>
-            </div>
-            <div
+            </div> -->
+            <!-- <div
               class="d-flex align-items-center justify-content-center ms-4 pb-3"
             >
               <img
@@ -158,7 +158,7 @@
                 class="w-10 object-cover aspect-square rounded-full"
                 alt=""
               />
-            </div>
+            </div> -->
           </div>
         </nav>
       </div>
@@ -1181,7 +1181,7 @@
             </div>
           </div>
           <div class="row g-5">
-            <div class="col-lg-6 wow fadeIn" data-wow-delay=".3s">
+            <div class="col-lg-12 wow fadeIn" data-wow-delay=".3s">
               <div class="p-2 h-100 rounded contact-map">
                 <iframe
                   class="rounded w-100 h-100"
@@ -1200,7 +1200,7 @@
                 <!-- <iframe class="rounded w-100 h-100" src style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
               </div>
             </div>
-            <div class="col-lg-6 wow fadeIn" data-wow-delay=".5s">
+            <div class="col-lg-12 wow fadeIn" data-wow-delay=".5s">
               <div class="p-2 rounded contact-form">
                 <div class="mb-4">
                   <input
